--- a/Python/discord-bot/.env
+++ b/Python/discord-bot/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=MTExMDU3NzY1MzIzMDA4NDE1Ng.GentzS.gQDm9Dx4F6qCSVt8qSTlaBRAHHyxspmyoaF7Vo
+DISCORD_TOKEN=Tocken-here
 DISCORD_GUILD=server
